src/objects/AB2__AdBook_Settings__c.object
<CustomObject>
    <fields>
        <fullName>AB2__MonthlyDropsDefault__c</fullName>
        <description>The default selection for the Monthy Drops select on the Add Drops page.
Possible values:
* Even Monthly
* Daily Weighted
* Daily Wtd Even Months
* Generate Monthly Drops</description>
        <inlineHelpText>The default selection for the Monthy Drops select on the Add Drops page.
Possible values:
* Even Monthly
* Daily Weighted
* Daily Wtd Even Months
* Generate Monthly Drops</inlineHelpText>
        <label>Monthly Drops Default</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__NewsletterLabel__c</fullName>
        <description>Label to display for AdBook Newsletter Media Type</description>
        <inlineHelpText>Label to display for AdBook Newsletter Media Type</inlineHelpText>
        <label>NewsletterLabel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OperationsRepTeamMemberRole__c</fullName>
        <description>Auto populate the Opportunity Operations Rep based on a Rep with the same Email as the OpportunityTeamMember User with this role name</description>
        <inlineHelpText>Auto populate the Opportunity Operations Rep based on a Rep with the same Email as the OpportunityTeamMember User with this role name</inlineHelpText>
        <label>Operations Rep Team Member Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityAccountSegmentFieldApiName__c</fullName>
        <description>The Salesforce API name of the Opportunity field that represents the Account segment</description>
        <inlineHelpText>The Salesforce API name of the Opportunity field that represents the Account segment</inlineHelpText>
        <label>Opportunity Account Segment Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityClientAccountFieldLookup__c</fullName>
        <description>Name of Opportunity Field that holds the relationship to the Client Account if the standard field isn&apos;t being used.</description>
        <inlineHelpText>Name of Opportunity Field that holds the relationship to the Client Account if the standard field isn&apos;t being used.</inlineHelpText>
        <label>Opportunity Client Account Field Lookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityLineItemEventsClassName__c</fullName>
        <description>Optional class that implements the AB2.AdBookEvents.OpportunityLineItemsUpdated interface. It will be invoked by AdBook when the events occur.
The value can be set via the AdBook Administration tab. This will validate the class implements the correct interface.

Length is 255 (Maximum Classname) + 15 (Maximum NamespacePrefix) + 1 (separating period)</description>
        <inlineHelpText>Optional class that implements the AB2.AdBookEvents.OpportunityLineItemsUpdated interface. It will be invoked by AdBook when the events occur.
The value can be set via the AdBook Administration tab to validate it implements the correct interface.</inlineHelpText>
        <label>OpportunityLineItemEventsClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityOrderManagerGroupFieldLookup__c</fullName>
        <description>The API name of a field on Opportunity that contains the OrderManagerGroup RepType Name. Used to auto populate a single &quot;AdBook Opportunity Order Manager Group Detail&quot; on the Opportunity</description>
        <inlineHelpText>The API name of a field on Opportunity that contains the OrderManagerGroup RepType Name. Used to auto populate a single &quot;AdBook Opportunity Order Manager Group Detail&quot; on the Opportunity</inlineHelpText>
        <label>OpportunityOrderManagerGroupFieldLookup</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityOrderNameFieldName__c</fullName>
        <description>When defined, use the Opportunity field with the same API name as the AdBook campaigns Name.</description>
        <inlineHelpText>When defined, use the Opportunity field with the same API name as the AdBook campaigns Name.</inlineHelpText>
        <label>Opportunity Order Name Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityOrderStatusFieldName__c</fullName>
        <description>The API name of a field on Opportunity that contains the Order Status Name. It will be populated from AdBook. Used when mapping the Opportunity to AdBook if the current Opportunity Stage isn&apos;t known.</description>
        <inlineHelpText>The API name of a field on Opportunity that contains the Order Status Name. Used if the current Opportunity stage to AdBook Status mapping isn&apos;t known</inlineHelpText>
        <label>Opportunity Order Status Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityOutOfSyncRestrictDropSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Deprecated)
When unchecked, the Opportunity.AB2__OutOfSync__c field flags the Opportunity for automated refresh from AdBook.
When checked, automated Opportunity syncs from Salesforce to Adbook will exclude drops.</description>
        <inlineHelpText>When unchecked, the Opportunity.AB2__OutOfSync__c field flags the Opportunity for automated refresh from AdBook.
When checked, automated Opportunity syncs from Salesforce to Adbook will exclude drops.</inlineHelpText>
        <label>(Deprecated)Opp OutOfSync restrict DropS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityRefreshedEventClassName__c</fullName>
        <description>Optional class that implements the AB2.AdBookEvents.OpportunityRefreshedEvent interface. It will be invoked by AdBook after refreshing an Order.
The value can be set via the AdBook Administration tab. This will validate the class implements the correct interface. 

Length is 255 (Maximum Classname) + 15 (Maximum NamespacePrefix) + 1 (separating period)</description>
        <inlineHelpText>Optional class that implements the AB2.AdBookEvents.OpportunityRefreshedEvent interface. It will be invoked by AdBook after refreshing an Order.
The value can be set via the AdBook Administration tab to validate it implements the correct interface.</inlineHelpText>
        <label>OpportunityRefreshedEventClassName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunitySalesTeamMappingField__c</fullName>
        <description>Map to Order Dynamic properties field &quot;Sales_Team&quot;</description>
        <inlineHelpText>Map to Order Dynamic properties field &quot;Sales_Team&quot;</inlineHelpText>
        <label>Opportunity Sales Team Mapping Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__Order_Record_Type_ID__c</fullName>
        <label>Order Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__PackageLabel__c</fullName>
        <description>Label to display for AdBook Package Media Type</description>
        <inlineHelpText>Label to display for AdBook Package Media Type</inlineHelpText>
        <label>PackageLabel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__PackageStorageInversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>DEV-14109 Store the package drops as OpportunityLineItem records and the Package as AdBookPackageDrop__c records. AdBookPackageComponentDrop__c records will not be used.</description>
        <inlineHelpText>Store the package drops as OpportunityLineItem records and the Package as AdBookPackageDrop__c records. AdBookPackageComponentDrop__c records will not be used.</inlineHelpText>
        <label>Package Storage Inversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Position_Record_Type_ID__c</fullName>
        <label>Position Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__PreventPackagesWithZeroQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, attempting to refresh a drop/package from AdBook to Salesforce will result in an error if it has a quantity of 0. When unchecked the OpportunityLineItem.AB2__ABQuantityZero__c flag will be set.</description>
        <inlineHelpText>When checked, attempting to refresh a drop/package from AdBook to Salesforce will result in an error if it has a quantity of 0. When unchecked the OpportunityLineItem.AB2__ABQuantityZero__c flag will be set.</inlineHelpText>
        <label>Prevent Drops with Zero Quantity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__RateCardPositionPricingMediaElementLimit__c</fullName>
        <description>The maximum number of MediaElements to check position pricing for. Each will require an individual API callout. Beyond this limit the entire PositionPricing for the RateCard is checked.</description>
        <inlineHelpText>The maximum number of MediaElements to check position pricing for. Each will require an individual API callout. Beyond this limit the entire PositionPricing for the RateCard is checked.</inlineHelpText>
        <label>RateCardPositionPricingMediaElementLimit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__Rate_Card_Record_Type_ID__c</fullName>
        <label>Rate Card Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__ResetPositionFiltersAfterGetDetails__c</fullName>
        <defaultValue>true</defaultValue>
        <description>On the Add Drop page, after pressing &quot;Get Details&quot; should the Position Filters be reset?</description>
        <inlineHelpText>On the Add Drop page, after pressing &quot;Get Details&quot; should the Position Filters be reset?</inlineHelpText>
        <label>Reset Position Filters after Get Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__RestrictOpportunityStageNameUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked the Opportunity.StageName won&apos;t be updated as part of the Refresh from AdBook process.</description>
        <inlineHelpText>When checked the Opportunity.StageName won&apos;t be updated as part of the Refresh from AdBook process.</inlineHelpText>
        <label>Restrict Opportunity StageName Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ScheduledRefreshForOutOfSyncDropsOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>(Deprecated)
Should the scheduled refresh for out of sync Opportunities only refresh the drops?</description>
        <inlineHelpText>Should the scheduled refresh for out of sync Opportunities only refresh the drops?</inlineHelpText>
        <label>(Deprecated)SchRefreshForOutOfSyncDropsO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SendUnmatchedCountryAsBlank__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send the Country field as blank if a match can’t be found in FieldValueMap</description>
        <inlineHelpText>Send the Country field as blank if a match can’t be found in FieldValueMap</inlineHelpText>
        <label>SendUnmatchedCountryAsBlank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SendUnmatchedStateAsBlank__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Send the State field as blank if a match can’t be found in FieldValueMap</description>
        <inlineHelpText>Send the State field as blank if a match can’t be found in FieldValueMap</inlineHelpText>
        <label>SendUnmatchedStateAsBlank</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Send_Exception_Emails__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should emails be sent to helpdesk@fattail.com with Exception Details?</description>
        <inlineHelpText>Should emails be sent to helpdesk@fattail.com with Exception Details?</inlineHelpText>
        <label>Send Exception Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ShowAdUnit__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Is the Ad Unit control shown on the drop finishing page?</description>
        <inlineHelpText>Is the Ad Unit control shown on the drop finishing page?</inlineHelpText>
        <label>Show Ad Unit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__ShowThirdPartyAdserver__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Show the 3rd Party AdServer controls?</description>
        <inlineHelpText>Show the 3rd Party AdServer controls?</inlineHelpText>
        <label>Show Third Party Adserver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Show_Add_Saved_Drops_Button__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is a checkbox to show or hide the Add Saved Drops Button on the Add Drop Visualforce page.</description>
        <inlineHelpText>This is a checkbox to show or hide the Add Saved Drops Button on the Add Drop Visualforce page.</inlineHelpText>
        <label>Show Add Saved Drops Button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Show_Remove_Drops__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Should the Remove Drops button be displayed on the Save Drops page?</description>
        <inlineHelpText>Should the Remove Drops button be displayed on the Save Drops page?</inlineHelpText>
        <label>Show Remove Drops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SuppressAdBookDropDeletionLimitedSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>During a limited sync to AdBook, suppress the deletion of drops that exist in AdBook but not in Salesforce</description>
        <inlineHelpText>During a limited sync to AdBook, suppress the deletion of drops that exist in AdBook but not in Salesforce</inlineHelpText>
        <label>Suppress AdBook Drop DeletionLimitedSync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SuppressAdBookDropDeletion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>During the sync to AdBook, suppress the deletion of drops that exist in AdBook but not in Salesforce</description>
        <inlineHelpText>During the sync to AdBook, suppress the deletion of drops that exist in AdBook but not in Salesforce</inlineHelpText>
        <label>Suppress AdBook Drop Deletion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SuppressAdBookGeneratedAttachments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>During the sync process from Salesforce to AdBook, ignore any attachments where the name starts with the current AB Order ID followed by an underscore.</description>
        <inlineHelpText>During the sync process from Salesforce to AdBook, ignore any attachments where the name starts with the current AB Order ID followed by an underscore.</inlineHelpText>
        <label>Suppress AdBook Generated Attachments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SuppressAttachmentSync__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Prevent syncing any Salesforce Attachments on an Opportunity to AdBook</description>
        <inlineHelpText>Prevent syncing any Salesforce Attachments on an Opportunity to AdBook</inlineHelpText>
        <label>Suppress Attachment Sync</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SuppressAutoSyncAccountContactCreate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When active, the &quot;Auto Sync Accounts and Contacts&quot; will still occur, but only for Accounts and Contacts where the AB ID is already set. I.e. records will only be auto updated in AdBook. They won&apos;t be created until used on an order.</description>
        <inlineHelpText>When active, the &quot;Auto Sync Accounts and Contacts&quot; will still occur, but only for Accounts and Contacts where the AB ID is already set. I.e. records will only be auto updated in AdBook. They won&apos;t be created until used on an order.</inlineHelpText>
        <label>Suppress AutoSync Account/Contact Create</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__SuppressOrderStatusIdChangesOnUpdate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check to prevent the OrderStatusId being changed when updating AdBook from the Salesforce Opportunity</description>
        <inlineHelpText>Check to prevent the OrderStatusId being changed when updating AdBook from the Salesforce Opportunity</inlineHelpText>
        <label>SuppressOrderStatusIdChangesOnUpdate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__UseIndependentDrops__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Use dedicated Independent Drop records rather than Opportunity Line Item records to track drops in Salesforce</description>
        <inlineHelpText>Use dedicated Independent Drop records rather than Opportunity Line Item records to track drops in Salesforce</inlineHelpText>
        <label>Use Independent Drops</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__Use_Separate_Drop_Notes__c</fullName>
        <defaultValue>false</defaultValue>
        <description>On Opportunity Line Item, should the Drop Notes be stored in the Description field (Unchecked) or in the AB Drop Notes/ABDropNotes__c field (Checked)</description>
        <inlineHelpText>On Opportunity Line Item, should the Drop Notes be stored in the Description field (Unchecked) or in the AB Drop Notes/ABDropNotes__c field (Checked)</inlineHelpText>
        <label>Use Separate Drop Notes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__WebsiteLabel__c</fullName>
        <description>Label to display for AdBook Website Media Type</description>
        <inlineHelpText>Label to display for AdBook Website Media Type</inlineHelpText>
        <label>WebsiteLabel</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>AdBook Settings</label>
</CustomObject>